flux/cluster/observability/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-prefix
  namespace: multimedia
spec:
  stripPrefix:
    prefixes:
      - /grafana
      - /prometheus
    forceSlash: true
